[F] Fix overflow for long texts

--- a/src/global.sass
+++ b/src/global.sass
@@ -54,6 +54,8 @@ button
   // Horizontal flex
   display: flex
   flex-flow: row
+  div
+    min-width: 0
 
 .h100
   height: 100%
